# sensfix

./: CMakeLists.txt
source/: plugin.cpp  plugin.hpp  samp.hpp
